--- a/about.css
+++ b/about.css
@@ -61,6 +61,11 @@ position: relative;
 .navbar ul li :hover::after{
     width: 100%;
 }
+iframe {
+    position: absolute;
+    TOP: 28%;
+    left: 28%;
+}
 
 footer{
     position: absolute;
